--- a/webapp/view/Liquidaciones.view.xml
+++ b/webapp/view/Liquidaciones.view.xml
@@ -34,18 +34,11 @@
 						</Select>
 						<Button text="" iconFirst="true" icon="sap-icon://media-forward" type="Accept" press="onPressAddMonth" tooltip="siguiente"/>
 					</HBox>
-					<!--<Link xmlns="sap.m" id="idLink"
-						text="{oDevice>/os/name} : Descargar Liquidación PDF {oViewModel>/selectedMonth} / {oViewModel>/selectedYear}"
-						visible="{= ${oDevice>/os/name} === 'iOS' ? true : false }" enabled="true" target="_blank"
-						href="{= ${oViewModel>/urlPdf} !== '' ? ${oViewModel>/urlPdf} : '#' }" wrapping="true" icon="sap-icon://pdf-attachment"></Link>-->
 					<VBox alignItems="Center">
-						<IllustratedMessage id="im" title="Liquidación" illustrationType="sapIllus-SimpleEmptyDoc" enableVerticalResponsiveness="false"
-							description="presiona el botón" visible="{=!${oDevice>/system/desktop}}">
-							<additionalContent>
-								<Button text="Descargar {oViewModel>/selectedMonth} / {oViewModel>/selectedYear}" press="onButtonPressDownloadPDF"
-									icon="sap-icon://pdf-attachment" enabled="{= ${oViewModel>/urlPdf} !== '' ? true :false }"/>
-							</additionalContent>
-						</IllustratedMessage>
+						<Image xmlns="sap.m" id="idimage1" busy="false" busyIndicatorDelay="1000" visible="{=!${oDevice>/system/desktop}}"
+							src="/webapp/images/ImagenENAP2.png" width="234px" height="324px"></Image>
+						<Button text="Descargar {oViewModel>/selectedMonth} / {oViewModel>/selectedYear}" visible="{=!${oDevice>/system/desktop}}"
+							press="onButtonPressDownloadPDF" icon="sap-icon://pdf-attachment" enabled="{= ${oViewModel>/urlPdf} !== '' ? true :false }"/>
 					</VBox>
 					<PDFViewer source="{oViewModel>/urlPdf}" title="Liquidación" height="600px" errorPlaceholderMessage="PDF no puede ser cargado o no existe"
 						displayType="Embedded" isTrustedSource="true" visible="{oDevice>/system/desktop}"/>
